# alpha-aviation

./: .gitignore  Dockerfile.railway-api  LICENSE.md  MERGE_GUIDE.md  PHASE2_ACCEPTANCE_CRITERIA.md  README.md  package-lock.json  package.json  pyproject.toml  railway.toml
api/: admin.py  models.py  (+2 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  parts_list.csv  pyproject.toml  railway.toml  requirements.txt
backend/api/: admin.py  analytics_views.py  component_history_activity.py  component_history_views.py  csv_response.py  history_views.py  labor_utils.py  labor_views.py  maintenance_activity.py  models.py  permissions.py  renderers.py  search_views.py  serializers.py  services.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0004_profile_middle_name.py  0005_profile_employee_id.py  0006_profile_medically_cleared_until.py  0007_profile_phone_number.py  0010_profile_inspector_authentication_and_more.py  0011_discrepancy_workorder.py  0012_remove_workorder_discrepancy_discrepancy_tach_time_and_more.py  0013_rename_mechanic_info_mechanic_and_more.py  0015_remove_part_low_stock_part_stock_alert_percentage_and_more.py  0016_remove_part_in_stock_remove_part_inspection_due_in_and_more.py  0017_flight_alter_inventory_company_schedule.py  0018_flight_aircraft_flight_company_flight_flight_number_and_more.py  0019_alter_flight_arrival_time_and_more.py  0020_alter_flight_arrival_time_and_more.py  0021_flight_primary_pilot.py  0022_flight_secondary_pilot_alter_flight_primary_pilot.py  0023_flight_approved.py  0024_flight_pilot_requirement_alter_flight_flight_type.py  0025_alter_profile_company_role_workorder_discrepancy_and_more.py  0025_merge_20260218_1019.py  0025_workorder_discrepancy_workorderpart_and_more.py  0026_alter_aircraft_registration_number.py  0026_workorderpart_workorder_parts_needed.py  0027_remove_workorder_completion_notes_workorder_ata_code_and_more.py  0028_remove_discrepancy_component_affected.py  0029_remove_flight_approved_flight_dispatcher_and_more.py  0030_alter_flight_aircraft_alter_flight_company.py  0031_alter_aircraft_company_alter_profile_company.py  0032_remove_inventory_in_stock_and_more.py  0033_rename_inventoryparts_inventorypart.py  0034_rename_part_inventory_parts.py  0035_alter_inventory_parts.py  0036_alter_discrepancy_reporter.py  0037_inventory_inventory_name.py  0037_merge_20260331_1728.py  0037_merge_20260331_2211.py  0038_aircraftpart_aircraft_aircraft_parts.py  (+21 more)
backend/config/: settings.py  settings_test.py
(+243 files in other folders)
