[project]
name = "aviation-backend"
version = "0.2.0"
description = ""
authors = [
    {name="Evan Cortez", email="evanvcortez@gmail.com"},
    {name="Zach Carter", email="thezachcarter1449@gmail.com"},
    {name="Kyle Bluemel"},
    {name="Jackson Jacobson"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dj-database-url (>=2.2.0,<3.0.0)",
    "whitenoise (>=6.6.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
